<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >
    
            
<Button
        android:id="@+id/loginTestKitBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn6" /> 
   <Button
        android:id="@+id/firstKitBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn2" />      
<ImageButton
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"	
	android:id="@+id/mainKitBtn"
	android:background="@drawable/ic_launcher"
	/>  
<Button
        android:id="@+id/completeKitBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn3" /> 
        
<Button
        android:id="@+id/achieveKitBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn4" /> 

<Button
        android:id="@+id/missionDoneKitBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn7" /> 


<Button
        android:id="@+id/noticebarKitBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn5" /> 

        
</LinearLayout>